# azure-agent-currency-exchange

./: .gitignore  Dockerfile  README.md  app.py  azure.yaml  contants.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: check-file.yml  ci.yml  clone-to-org.yml  sync-to-hub.yml
infra/: main.bicep  main.parameters.json
infra/hooks/: deploy-model.sh
infra/modules/: azure-ai-project.bicep
