[project]
name = "azure-agent-currency-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "agent-framework-azure-ai>=1.0.0b251120",
    "azure-identity>=1.26.0b1",
    "azure-monitor-opentelemetry>=1.8.2",
    "azure-monitor-opentelemetry-exporter>=1.0.0b45",
    "fastapi>=0.122.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]
